--- a/DAL_QLBANHANG/DAL_QLBANHANG.csproj
+++ b/DAL_QLBANHANG/DAL_QLBANHANG.csproj
@@ -41,7 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL_KhachHang.cs" />
     <Compile Include="DAL_NhanVien.cs" />
+    <Compile Include="DAL_SanPham.cs" />
     <Compile Include="DbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
