--- a/BUS_QLBANHANG/BUS_QLBANHANG.csproj
+++ b/BUS_QLBANHANG/BUS_QLBANHANG.csproj
@@ -41,7 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BUS_KhachHang.cs" />
     <Compile Include="BUS_NhanVien.cs" />
+    <Compile Include="BUS_SanPham.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
