--- a/DTO_QLBANHANG/DTO_QLBANHANG.csproj
+++ b/DTO_QLBANHANG/DTO_QLBANHANG.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DTO_Hang.cs" />
+    <Compile Include="DTO_SanPham.cs" />
     <Compile Include="DTO_KhachHang.cs" />
     <Compile Include="DTO_NhanVien.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
